skin/frontend/default/myintent/css/custom.css
.row{
	display: block;
}
.text-center{
	text-align: center !important;
}

.text-left{
	text-align: left !important;
}

.text-right{
	text-align: right !important;
}

.main{
	padding-top: 40px;
}

.block.block-account .no-display {
    display: block;
}

/* Header */
.header .header-topbar {
    width: auto;
	border-bottom: 0 solid #d5d5d5;
	background-color: #ffffff;
	padding-left: 10px;
}

.header .quick-access {
    float: right;
    padding: 28px 10px 1px 0;
}

.header h1.page-title {
	background-color: transparent;
	text-transform: uppercase;
	width: auto;
	padding-top: 25px;
}

/* Log in button in header */
div.quick-access .links {
	display: block;
	float: left;
	margin: 0;
	margin-left: 20px;
}
  
div.quick-access .links li {
	background: none;
}

div.quick-access .links li a{
	color: #6d6c67;
	font-size: 12px;
	font-weight: 400;
	font-family: Verdana;
	line-height: 24px;
}

/* My account page - Login/Register, Forgot your password */
#account-container, #forgotpassword-container{
	width: 100%;
}

#fblogin_container a.f-right{
	display: block;
	float: none !important;
	margin-bottom: 15px;
}

#existingUsers_container .row{
	margin-top: 5px;
	margin-bottom: 5px;
}

#existingUsers_container h2, #newUsers_container h2{
	background-color: rgba(0,0,0,0.7);
	color: white;
	padding-top: 8px;
	padding-bottom: 8px;
	text-align: left;
}

#existingUsers_container, #newUsers_container{
	display: block;
	margin-bottom: 15px;
}

#newUsers_container .fieldset {
    margin: 0;
	padding: 0;
	background-color: transparent;
    border: 0px solid #bbafa0;
}

.account-login .content {
    min-height: 0;
}

.account-create h2 {
    background: #d5d5d5 none repeat scroll 0 0;
    font-family: "Raleway_Medium";
    font-size: 16px;
    font-weight: normal;
    margin-bottom: 20px;
    padding: 15px 10px;
    text-align: right;
    text-transform: uppercase;
}

#forgotpassword-container .form-list li{
	margin-bottom: 5px;
}

#captcha-input-box-user_forgotpassword{
	margin-top: 5px;
}

/* My account page - Summary */
.block-account .block-content li.current, .block-account .block-content li a {
    border-bottom: 0 solid #d5d5d5;
}

#my-orders-table{
	border: 0 solid #d5d5d5;
}

#my-orders-table thead th {
    background: transparent none repeat scroll 0 0;
	font-size: 12px;
    font-weight: bold;
	font-family: Verdana;
    text-align: left;
	border: 0 solid #d5d5d5;
	border-bottom: 1px solid #d5d5d5;
	padding-top: 8px;
	padding-bottom: 8px;
}

#my-orders-table tbody td {
    border-right: 0 solid #d5d5d5;
}

/* home page */
#myintent_homepage_container{
	position: fixed;
	left: 50%;
	transform: translate(-50.3%, 0);
	z-index: 100;
	background-color: white;
	width: 100%;
	border: 1px solid white;
}

#myintent_logo_container{
	width: 80%;
}
	
#myintent_homepage_container img{
    display: block;
	margin-left: auto;
    margin-right: auto;
	margin-top: 10%;
	margin-bottom: 10%;
}

#enter_button_container{
	width: 15%;
}

#enter_button_container, #myintent_logo_container{
    margin-left: auto;
    margin-right: auto;
}

/* section headers - black background and white text */
.block .block-title {
	background-color: rgba(0,0,0,0.7);
	padding: 8px 10px;
}

.block .block-title strong {
    text-align: left;
	color: white;
}

/* My Account - address book */
.addresses-list h2{
	background-color: rgba(0,0,0,0.7);
	padding: 8px 10px;
    text-align: left;
	color: white;
	line-height: 1.0;
}

/* contact page block headers - background color and text alignment */
.block.block-contactform p.required {
	margin-top: 0;
    display: inline-block;
}

.block.block-contactform p.required {
    width: 50%;
}

.block.block-contactform button.button {
    float: right;
}

.block.block-contactform .fields .field {
    margin-left: 0;
}

.block.block-contactform .fields .field input[type="text"] {
    width: 100%;
	box-sizing: border-box;
    margin-left: 0;
}


.block.block-contactform .form-list li.wide textarea {
    width: 95.7%;
}

.contacts-area {
    margin-top: 0;
}

/* Shopping cart */
#shopping-cart-table {
    border: 0 solid #d5d5d5;
}

#shopping-cart-table thead th {
    background: rgba(0,0,0,0.7) none repeat scroll 0 0;
	color: white;
	padding: 8px 10px;
}

#shopping-cart-table tfoot tr.first td {
   background: #f1f1f1 none repeat scroll 0 0;
}

#shopping-cart-table tr th, #shopping-cart-table tr td {
	border: 0 none !important;
	border-bottom: 0 solid #d5d5d5 !important;
}

#shopping-cart-table tr.last th, #shopping-cart-table tr.last td {
    text-align: center;
}

#shopping-cart-table tr.last th:first-child, #shopping-cart-table tr.last td:first-child {
    text-align: left;
}

#shopping-cart-table tbody td.pr-img-td {
	width: 43%;
}
	
#shopping-cart-table tbody tr td span span{
    display: inline;
    text-align: center;
}

#shopping-cart-table h2.product-name {
	text-align: right;
}

#shopping-cart-table .item-options{
	float: right;
	text-align: right;
}

	
/* turn buttons into links */
#shopping-cart-table tfoot button.link {
     background:none!important;
     border:none; 
     padding:0!important;
     font: inherit;
	 font-weight: bold;
	 font-size: 14px;
	 color: #225e7c;
     cursor: pointer;
	 text-transform: uppercase;
	 
}

#shopping-cart-table tfoot button.link:hover {
	 color: #797872;
}

#shopping-cart-table tbody .btn-remove{
	float: right;
}

/* combining subtotal and grand total to shopping cart summary table */
#shopping-cart-table {
    margin-bottom: 0;
}

.cart .cart-collaterals {
    padding: 0;
}

.cart .totals {
    width: 100%;
}

#shopping-cart-totals-table, #shopping-cart-totals-table .price{
	border: 0;
	font-size: 14px !important;
}

#shopping-cart-totals-table .totals tfoot th strong, #shopping-cart-totals-table .totals tfoot td strong {
    font-size: 14px;
}

#shopping-cart-totals-table td{
	border: 0;
	border-bottom: 2px solid #d5d5d5;
	padding-top: 5px;
	padding-bottom: 5px;
}

#shopping-cart-totals-table tfoot td{
	border-bottom: 0 solid #d5d5d5;
}
/* ... */

